fix modal text from overlapping over close button

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -51,7 +51,7 @@
 			display: block;
 			font-size: 25px;
 			color: black;
-			min-width: 700px;
+			min-width: 450px;
 			text-align: center;
 
 		}
